--- a/ゼロから深層学習.ipynb
+++ b/ゼロから深層学習.ipynb
@@ -140,8 +140,7 @@
     "\n",
     "\n",
     "\n",
-
-    "    # 微分して求めた式 2nd_ver\n",
+    "    # 微分して求めた式 2nd_ver jikken\n",
     "    W1 -= learning_rate * dL_dW1\n",
     "    W2 -= learning_rate * dL_dW2\n",
     "    W3 -= learning_rate * dL_dW3\n"
