--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -18,19 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.2 0.5 0.8 1.  1.2 0.7 0.9 1.1]\n",
-      "[1.36021119 3.10758575 3.24562428 3.59474913 4.24387399]\n",
-      "[0.95534701 1.99027342 2.10238961 3.50477923 3.03731602 3.50477923\n",
-      " 3.97224243 3.97224243]\n",
-      "[0.01227909 0.03456441 0.03866523 0.15717038 0.09848135 0.15717038\n",
-      " 0.25083457 0.25083457]\n"
+      "[1 1 0]\n",
+      "[0.96378422 2.00923896 2.11818211 3.53636422 3.06363685 3.53636422\n",
+      " 4.00909159 4.00909159]\n",
+      "[0.94318288 1.96337539 2.08028877 3.46057753 3.00048128 3.46057753\n",
+      " 3.92067379 3.92067379]\n",
+      "[0.01269265 0.03520597 0.03957229 0.15734139 0.09931749 0.15734139\n",
+      " 0.2492644  0.2492644 ]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 114\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[39mfor\u001b[39;00m num \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(network[\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m])):\u001b[39m#ノードの個数\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     \u001b[39mfor\u001b[39;00m i1 \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(network[\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m1\u001b[39m])):\n\u001b[1;32m--> 114\u001b[0m         koubaiw1 \u001b[39m=\u001b[39m bibun_numerical_gradient(error, network[\u001b[39m'\u001b[39;49m\u001b[39mW1\u001b[39;49m\u001b[39m'\u001b[39;49m][num][i])\n\u001b[0;32m    116\u001b[0m         dw11 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(dw11, np\u001b[39m.\u001b[39marray[koubaiw1], axis(\u001b[39m0\u001b[39m))\n\u001b[0;32m    117\u001b[0m     dw1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(dw11, np\u001b[39m.\u001b[39marray[koubaiw1], axis(\u001b[39m0\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[11], line 33\u001b[0m, in \u001b[0;36mbibun_numerical_gradient\u001b[1;34m(f, x)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbibun_numerical_gradient\u001b[39m(f, x):\n\u001b[0;32m     32\u001b[0m     h \u001b[39m=\u001b[39m \u001b[39m1e-4\u001b[39m\u001b[39m#0.0001\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m     \u001b[39mreturn\u001b[39;00m (f(x\u001b[39m+\u001b[39;49mh)\u001b[39m-\u001b[39mf(x\u001b[39m-\u001b[39mh))\u001b[39m/\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mh)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
      ]
     }
    ],
@@ -74,7 +87,7 @@
     "    x1 = int(np.random.random()<0.5)\n",
     "    x2 = int(np.random.random()<0.5)\n",
     "    teach = x2*4 + x1*2 + x0\n",
-    "    x  = np.array([[x2],[x1],[x0]])\n",
+    "    x  = np.array([x2,x1,x0])\n",
     "    teach = np.array([[int(teach==0)],\\\n",
     "                      [int(teach==1)],\\\n",
     "                      [int(teach==2)],\\\n",
@@ -132,12 +145,12 @@
     "dw1 = []\n",
     "dw2 = []\n",
     "dw3 = []\n",
-    "# print(len(network['W1']))\n",
+    "# print(network['W1'])\n",
     "x, teach = make_input()\n",
     "network = init_network()\n",
-    "x = np.array([1, 0, 0])\n",
+    "# x = np.array([1, 0, 0])\n",
+    "print(x)\n",
     "y = forward(network, x)\n",
-    "print(y)\n",
     "error = sum_squared_error(y, teach)\n",
     "\n",
     "for i in range(10):\n",
@@ -145,28 +158,39 @@
     "    y = forward(network, x)\n",
     "    print(y)\n",
     "    error = sum_squared_error(y, teach)\n",
+    "\n",
     "    for num in range(len(network['W1'])):#ノードの個数\n",
-    "        for i in range(len(network['W1'][1])):\n",
+    "        for i1 in range(len(network['W1'][1])):\n",
     "            koubaiw1 = bibun_numerical_gradient(error, network['W1'][num][i])\n",
     "\n",
-    "            dw1 = np.append(dw1, np.array[koubaiw1], axis(0))\n",
+    "            dw11 = np.append(dw11, np.array[koubaiw1], axis(0))\n",
+    "        dw1 = np.append(dw11, np.array[koubaiw1], axis(0))\n",
     "\n",
-    "    for i in range(len(network['W2'])):\n",
-    "        for i in range(len(network['W2'][1])):\n",
+    "    for num in range(len(network['W2'])):\n",
+    "        for i2 in range(len(network['W2'][1])):\n",
     "            koubaiw2 = bibun_numerical_gradient(error, network['W2'][num][i])\n",
     "\n",
-    "            dw2 = np.append(dw2, np.array[koubaiw2], axis(0))\n",
+    "            dw21 = np.append(dw21, np.array[koubaiw1], axis(0))\n",
+    "        dw2 = np.append(dw21, np.array[koubaiw1], axis(0))\n",
     "\n",
-    "    for i in range(len(network['W3'])):\n",
-    "        for i in range(len(network['W3'][1])):\n",
+    "    for num in range(len(network['W3'])):\n",
+    "        for i3 in range(len(network['W3'][1])):\n",
     "            koubaiw3 = bibun_numerical_gradient(error, network['W3'][num][i])\n",
     "\n",
-    "            dw3 = np.append(dw3, np.array[koubaiw3], axis(0))\n",
+    "            dw31 = np.append(dw31, np.array[koubaiw3], axis(0))\n",
+    "        dw3 = np.append(dw31, np.array[koubaiw1], axis(0))\n",
     "\n",
-    "        # 微分して求めた式を、\n",
-    "    W1 -= learning_rate * dW1\n",
-    "    W2 -= learning_rate * dW2\n",
-    "    W3 -= learning_rate * dW3\n",
+    "        # 微分して求めたそれぞれの傾きをもとに、重みを更新\n",
+    "    network['W1'] -= learning_rate * dW1\n",
+    "    network.W2 -= learning_rate * dW2\n",
+    "    network.W3 -= learning_rate * dW3\n",
+    "    dw1 = []\n",
+    "    dw2 = []\n",
+    "    dw3 = []\n",
+    "\n",
+    "\n",
+    "test_x, test_teach = make_input()\n",
+    "test = forward(network, test_x)\n",
     "\n"
    ]
   },
