--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -142,6 +142,9 @@
     "\n",
     "    return y\n",
     "\n",
+    "def loss_f(W):\n",
+    "    return sum_squared_error(y, teach)\n",
+    "\n",
     "dw1 = []\n",
     "dw2 = []\n",
     "dw3 = []\n",
