--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -18,32 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 0]\n",
-      "[0.96378422 2.00923896 2.11818211 3.53636422 3.06363685 3.53636422\n",
-      " 4.00909159 4.00909159]\n",
-      "[0.94318288 1.96337539 2.08028877 3.46057753 3.00048128 3.46057753\n",
-      " 3.92067379 3.92067379]\n",
-      "[0.01269265 0.03520597 0.03957229 0.15734139 0.09931749 0.15734139\n",
-      " 0.2492644  0.2492644 ]\n"
+      "[1 0 1]\n",
+      "[0.96167371 2.00432145 2.11397162 3.52794324 3.05661937 3.52794324\n",
+      " 3.99926711 3.99926711]\n",
+      "[0.96801139 2.01876735 2.12613393 3.55226786 3.07688988 3.55226786\n",
+      " 4.02764584 4.02764584]\n",
+      "[0.01184425 0.03387233 0.0377115  0.15697697 0.09758474 0.15697697\n",
+      " 0.25251662 0.25251662]\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "'numpy.float64' object is not callable",
+     "evalue": "bibun_numerical_gradient() takes 2 positional arguments but 5 were given",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 114\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[39mfor\u001b[39;00m num \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(network[\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m])):\u001b[39m#ノードの個数\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     \u001b[39mfor\u001b[39;00m i1 \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(network[\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m1\u001b[39m])):\n\u001b[1;32m--> 114\u001b[0m         koubaiw1 \u001b[39m=\u001b[39m bibun_numerical_gradient(error, network[\u001b[39m'\u001b[39;49m\u001b[39mW1\u001b[39;49m\u001b[39m'\u001b[39;49m][num][i])\n\u001b[0;32m    116\u001b[0m         dw11 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(dw11, np\u001b[39m.\u001b[39marray[koubaiw1], axis(\u001b[39m0\u001b[39m))\n\u001b[0;32m    117\u001b[0m     dw1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(dw11, np\u001b[39m.\u001b[39marray[koubaiw1], axis(\u001b[39m0\u001b[39m))\n",
-      "Cell \u001b[1;32mIn[11], line 33\u001b[0m, in \u001b[0;36mbibun_numerical_gradient\u001b[1;34m(f, x)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbibun_numerical_gradient\u001b[39m(f, x):\n\u001b[0;32m     32\u001b[0m     h \u001b[39m=\u001b[39m \u001b[39m1e-4\u001b[39m\u001b[39m#0.0001\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m     \u001b[39mreturn\u001b[39;00m (f(x\u001b[39m+\u001b[39;49mh)\u001b[39m-\u001b[39mf(x\u001b[39m-\u001b[39mh))\u001b[39m/\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mh)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+      "Cell \u001b[1;32mIn[4], line 117\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[39mfor\u001b[39;00m num \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(network[\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m])):\u001b[39m#ノードの個数\u001b[39;00m\n\u001b[0;32m    116\u001b[0m     \u001b[39mfor\u001b[39;00m i1 \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(network[\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m1\u001b[39m])):\n\u001b[1;32m--> 117\u001b[0m         koubaiw1 \u001b[39m=\u001b[39m bibun_numerical_gradient(sum_squared_error, x, y, teach, network[\u001b[39m'\u001b[39;49m\u001b[39mW1\u001b[39;49m\u001b[39m'\u001b[39;49m][num][i])\u001b[39m#関数を引数に入れる場合は、関数名を引数に入れる。渡した材料で、関数の中で、入れた関数に引数を渡して使用する。\u001b[39;00m\n\u001b[0;32m    119\u001b[0m         dw11 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(dw11, np\u001b[39m.\u001b[39marray[koubaiw1], axis(\u001b[39m0\u001b[39m))\n\u001b[0;32m    120\u001b[0m     dw1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(dw11, np\u001b[39m.\u001b[39marray[koubaiw1], axis(\u001b[39m0\u001b[39m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: bibun_numerical_gradient() takes 2 positional arguments but 5 were given"
      ]
     }
    ],
@@ -78,9 +77,11 @@
     "def sum_squared_error(y, t):#２乗和誤差\n",
     "    return 0.5 * np.sum((y-t)**2)\n",
     "\n",
-    "def bibun_numerical_gradient(f, x):\n",
+    "def bibun_numerical_gradient(sum_squared_error, y, teach, w):#ここのｙは、順伝播した結果のことなので、入力値xの情報は入っている。\n",
     "    h = 1e-4#0.0001\n",
-    "    return (f(x+h)-f(x-h))/(2*h)\n",
+    "    loss = sum_squared_error(y, teach)\n",
+    "\n",
+    "    return (sum_squared_error(w+h)-sum_squared_error(w-h))/(2*h)\n",
     "\n",
     "def make_input():\n",
     "    x0 = int(np.random.random()<0.5)\n",
@@ -142,8 +143,6 @@
     "\n",
     "    return y\n",
     "\n",
-    "def loss_f(W):\n",
-    "    return sum_squared_error(y, teach)\n",
     "\n",
     "dw1 = []\n",
     "dw2 = []\n",
@@ -154,17 +153,15 @@
     "# x = np.array([1, 0, 0])\n",
     "print(x)\n",
     "y = forward(network, x)\n",
-    "error = sum_squared_error(y, teach)\n",
+    "error = sum_squared_error(y, teach) #かんすうをいれなきゃだめ\n",
     "\n",
     "for i in range(10):\n",
     "    x, teach = make_input()\n",
     "    y = forward(network, x)\n",
-    "    print(y)\n",
-    "    error = sum_squared_error(y, teach)\n",
     "\n",
     "    for num in range(len(network['W1'])):#ノードの個数\n",
     "        for i1 in range(len(network['W1'][1])):\n",
-    "            koubaiw1 = bibun_numerical_gradient(error, network['W1'][num][i])\n",
+    "            koubaiw1 = bibun_numerical_gradient(sum_squared_error, x, y, teach, network['W1'][num][i])#関数を引数に入れる場合は、関数名を引数に入れる。渡した材料で、関数の中で、入れた関数に引数を渡して使用する。\n",
     "\n",
     "            dw11 = np.append(dw11, np.array[koubaiw1], axis(0))\n",
     "        dw1 = np.append(dw11, np.array[koubaiw1], axis(0))\n",
@@ -214,6 +211,170 @@
     "    result[np.argmax(lst)] = 1\n",
     "\n",
     "    return result\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ごっちゃになってしまったので、作り直し"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def identity_function(x):#恒等関数\n",
+    "    return x \n",
+    "\n",
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c)#最大値で引くことで、オーバーフローを防ぐ\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a /sum_exp_a\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "def change_one_hot(lst):\n",
+    "    # 最大値を取得\n",
+    "    max_value = np.max(lst)\n",
+    "\n",
+    "    # 最大値だけ1、残りを0の配列に置き換える\n",
+    "    result = np.zeros(8)\n",
+    "    result[np.argmax(lst)] = 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def sum_squared_error(y, t):#２乗和誤差\n",
+    "    return 0.5 * np.sum((y-t)**2)\n",
+    "\n",
+    "\n",
+    "def make_input():\n",
+    "    x0 = int(np.random.random()<0.5)\n",
+    "    x1 = int(np.random.random()<0.5)\n",
+    "    x2 = int(np.random.random()<0.5)\n",
+    "    teach = x2*4 + x1*2 + x0\n",
+    "    x  = np.array([x2,x1,x0])\n",
+    "    teach = np.array([[int(teach==0)],\\\n",
+    "                      [int(teach==1)],\\\n",
+    "                      [int(teach==2)],\\\n",
+    "                      [int(teach==3)],\\\n",
+    "                      [int(teach==4)],\\\n",
+    "                      [int(teach==5)],\\\n",
+    "                      [int(teach==6)],\\\n",
+    "                      [int(teach==7)]])\n",
+    "    return x, teach\n",
+    "\n",
+    "\n",
+    "\n",
+    "def init_network(): #3層のネットワークを定義\n",
+    "    network = {}\n",
+    "    network['W1'] = np.array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3], \n",
+    "                              [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2], \n",
+    "                              [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4], \n",
+    "                              ]) #3つのニューロンから、8つのニューロンに出力する際の重み\n",
+    "    network['b1'] = np.array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]) #バイアスを8つのニューロンにたす\n",
+    "\n",
+    "\n",
+    "    network['W2'] = np.array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7]]) #8つのニューロンから5つのニューロンに出力する際の重み\n",
+    "    \n",
+    "    network['b2'] = np.array([0.1, 0.2, 0.5, 0.3, 0.4])#5つのニューロンにたすバイアス\n",
+    "    network['W3'] = np.array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                              [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                              [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                              [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                              [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]) #5つのニューロンから8つのニューロンに出力する際の重み\n",
+    "    network['b3'] = np.array([0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]) #バイアスを8つのニューロンにたす\n",
+    "\n",
+    "    return network\n",
+    "\n",
+    "def forward(network, x):\n",
+    "    W1, W2, W3 = network['W1'], network['W2'], network['W3'] #これらはinitに書くべきなきがする\n",
+    "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
+    "\n",
+    "    a1 = np.dot(x, W1) + b1\n",
+    "    z1 = sigmoid(a1)\n",
+    "    a2 = np.dot(z1, W2) + b2\n",
+    "    z2 = sigmoid(a2)\n",
+    "    a3 = np.dot(z2, W3) + b3\n",
+    "    print(a3)\n",
+    "    y = softmax (a3)\n",
+    "\n",
+    "    return y\n",
+    "\n",
+    "def bibun_numerical_gradient(sum_squared_error ,ywh1, ywh2):#ここのｙは、順伝播した結果のことなので、入力値xの情報は入っている。\n",
+    "    h = 1e-4#0.0001\n",
+    "\n",
+    "    return (sum_squared_error(ywh1)-sum_squared_error(ywh2))/(2*h)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "dw1 = []\n",
+    "dw2 = []\n",
+    "dw3 = []\n",
+    "# print(network['W1'])\n",
+    "x, teach = make_input()\n",
+    "network = init_network()\n",
+    "# x = np.array([1, 0, 0])\n",
+    "print(x)\n",
+    "y = forward(network, x)\n",
+    "error = sum_squared_error(y, teach) #かんすうをいれなきゃだめ\n",
+    "\n",
+    "for i in range(10):\n",
+    "    x, teach = make_input()\n",
+    "    y1 = forward(network, x)\n",
+    "    y2 = forward(network, x)\n",
+    "\n",
+    "    for num in range(len(network['W1'])):#ノードの個数\n",
+    "        for i1 in range(len(network['W1'][1])):\n",
+    "            koubaiw1 = bibun_numerical_gradient(sum_squared_error, , network['W1'][num][i])#関数を引数に入れる場合は、関数名を引数に入れる。渡した材料で、関数の中で、入れた関数に引数を渡して使用する。\n",
+    "\n",
+    "            dw11 = np.append(dw11, np.array[koubaiw1], axis(0))\n",
+    "        dw1 = np.append(dw11, np.array[koubaiw1], axis(0))\n",
+    "\n",
+    "    for num in range(len(network['W2'])):\n",
+    "        for i2 in range(len(network['W2'][1])):\n",
+    "            koubaiw2 = bibun_numerical_gradient(error, network['W2'][num][i])\n",
+    "\n",
+    "            dw21 = np.append(dw21, np.array[koubaiw1], axis(0))\n",
+    "        dw2 = np.append(dw21, np.array[koubaiw1], axis(0))\n",
+    "\n",
+    "    for num in range(len(network['W3'])):\n",
+    "        for i3 in range(len(network['W3'][1])):\n",
+    "            koubaiw3 = bibun_numerical_gradient(error, network['W3'][num][i])\n",
+    "\n",
+    "            dw31 = np.append(dw31, np.array[koubaiw3], axis(0))\n",
+    "        dw3 = np.append(dw31, np.array[koubaiw1], axis(0))\n",
+    "\n",
+    "        # 微分して求めたそれぞれの傾きをもとに、重みを更新\n",
+    "    network['W1'] -= learning_rate * dW1\n",
+    "    network.W2 -= learning_rate * dW2\n",
+    "    network.W3 -= learning_rate * dW3\n",
+    "    dw1 = []\n",
+    "    dw2 = []\n",
+    "    dw3 = []\n",
+    "\n",
+    "\n",
+    "test_x, test_teach = make_input()\n",
+    "test = forward(network, test_x)\n",
+    "\n"
    ]
   }
  ],
