--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -376,6 +376,58 @@
     "test = forward(network, test_x)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ニューラルネットワークを作る関数\n",
+    "def set_network(w1,b1,w2,b2,w3,b3):\n",
+    "    network[w1,b1,w2,b2,w3,b3]\n",
+    "    return network\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def forward(network, in_x):\n",
+    "    W1, W2, W3 = network['W1'], network['W2'], network['W3'] #　　　名前か番号か迷う\n",
+    "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
+    "\n",
+    "    a1 = np.dot(x, W1) + b1\n",
+    "    z1 = sigmoid(a1)\n",
+    "    a2 = np.dot(z1, W2) + b2\n",
+    "    z2 = sigmoid(a2)\n",
+    "    a3 = np.dot(z2, W3) + b3\n",
+    "    print(a3)\n",
+    "    y = softmax (a3)\n",
+    "\n",
+    "    return y #xを入力したnetworkで順伝播して得られた出力結果\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def sum_squared_error(y, t):#２乗和誤差\n",
+    "    return 0.5 * np.sum((y-t)**2)\n",
+    "\n",
+    "def bibun_numerical_gradient(error_func, forward_func, w):\n",
+    "    h = 1e-4#0.0001\n",
+    "    forward_func()\n",
+    "    return (sum_squared_error()-sum_squared_error(ywh2))/(2*h)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
