--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -419,10 +419,78 @@
     "def sum_squared_error(y, t):#２乗和誤差\n",
     "    return 0.5 * np.sum((y-t)**2)\n",
     "\n",
-    "def bibun_numerical_gradient(error_func, forward_func, w):\n",
-    "    h = 1e-4#0.0001\n",
-    "    forward_func()\n",
-    "    return (sum_squared_error()-sum_squared_error(ywh2))/(2*h)\n",
+    "def bibun_numerical_gradient(out_y1, out_y2):\n",
+    "    return (out_y1 - out_y2)/(2*h)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def make_input():\n",
+    "    x0 = int(np.random.random()<0.5)\n",
+    "    x1 = int(np.random.random()<0.5)\n",
+    "    x2 = int(np.random.random()<0.5)\n",
+    "    teach = x2*4 + x1*2 + x0\n",
+    "    x  = np.array([x2,x1,x0])\n",
+    "    teach = np.array([[int(teach==0)],\\\n",
+    "                      [int(teach==1)],\\\n",
+    "                      [int(teach==2)],\\\n",
+    "                      [int(teach==3)],\\\n",
+    "                      [int(teach==4)],\\\n",
+    "                      [int(teach==5)],\\\n",
+    "                      [int(teach==6)],\\\n",
+    "                      [int(teach==7)]])\n",
+    "    return x, teach\n",
+    "\n",
+    "\n",
+    "\n",
+    "#微小量hを定義\n",
+    "h = 1e-4#0.0001\n",
+    "\n",
+    "#初期の重みとバイアスを記入\n",
+    "w1 = \n",
+    "w2 = \n",
+    "w3 = \n",
+    "b1 = \n",
+    "b2 = \n",
+    "b3 = \n",
+    "#微小量hを定義\n",
+    "h = 1e-4#0.0001\n",
+    "\n",
+    "\n",
+    "\n",
+    "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
+    "in_x, teach = make_input()#入力データと教師信号作成\n",
+    "out = forward(Network, in_x)#順伝播\n",
+    "error = sum_squared_error(out,teach) #出力と教師を比較して誤差を計算\n",
+    "\n",
+    "\n",
+    "#繰り返し処理\n",
+    "    #+hしてちょっと増やした場合の順伝播をする。\n",
+    "\n",
+    "    # w1 = Network[0]+h,Network[2]+h,Network[4]+h #各パラメータをhだけ増やした場合の順伝播\n",
+    "    # w2 = Network[0]-h,Network[2]-h,Network[4]-h #各パラメータをhだけ減らした場合の順伝播\n",
+    "\n",
+    "    あるひとつのパラメータだけちょっと増やしたNetworkを作って、順伝播する\n",
+    "    あるひとつのパラメータだけちょっと減らしたNetworkを作って、順伝播する\n",
+    "    それらの変化量から、ある一つのパラメータの勾配を求める。そしてリストにまとめる\n",
+    "\n",
+    "    これらをすべてのパラメータで一つ一つやって(for文)、勾配のリストを完成させる\n",
+    "\n",
+    "    勾配のリストに学習率をかけた者を、今のパラメータから引いて更新する\n",
+    "\n",
+    "    更新後のパラメータで新たなNetworkを作成する\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n",
     "\n",
     "\n",
