--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -462,13 +462,23 @@
     "in_x, teach = make_input()#入力データと教師信号作成\n",
     "out = forward(Network, in_x)#順伝播\n",
     "error = sum_squared_error(out,teach) #出力と教師を比較して誤差を計算\n",
-    "\n",
+    "koubai_list = []\n",
     "\n",
     "#繰り返し処理\n",
-    "    #+hしてちょっと増やした場合の順伝播をする。\n",
+    "for gyou in range(len(w1的な感じつまり行数サイズ取得))\n",
+    "    for retsu in range(lem(列数サイズ取得))\n",
+    "    \n",
+    "    Network = Network[gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る\n",
+    "    out_y1 = forward(Network,in_x)#そのNetworkで順伝播\n",
     "\n",
-    "    # w1 = Network[0]+h,Network[2]+h,Network[4]+h #各パラメータをhだけ増やした場合の順伝播\n",
-    "    # w2 = Network[0]-h,Network[2]-h,Network[4]-h #各パラメータをhだけ減らした場合の順伝播\n",
+    "    Network = Network[gyou][retsu] -= h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
+    "    out_y2 = forward(Network,in_x)#そのNetworkで順伝播\n",
+    "\n",
+    "    koubai = bibun_numerical_gradient(out_y1,out_y2)\n",
+    "    koubai_list[gyou][retsu] = koubai\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "    あるひとつのパラメータだけちょっと増やしたNetworkを作って、順伝播する\n",
     "    あるひとつのパラメータだけちょっと減らしたNetworkを作って、順伝播する\n",
