--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -468,20 +468,31 @@
     "for gyou in range(len(w1的な感じつまり行数サイズ取得))\n",
     "    for retsu in range(lem(列数サイズ取得))\n",
     "    \n",
-    "    Network = Network[gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る\n",
-    "    out_y1 = forward(Network,in_x)#そのNetworkで順伝播\n",
+    "    Network1 = Network[gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（w1=w1+hしてから、set_networkで作るのか？）\n",
+    "    out_y1 = forward(Network,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "    loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "    Network = Network[gyou][retsu] -= h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
-    "    out_y2 = forward(Network,in_x)#そのNetworkで順伝播\n",
+    "    Network2 = Network[gyou][retsu] -= h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
+    "    out_y2 = forward(Network,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "    loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "    koubai = bibun_numerical_gradient(out_y1,out_y2)\n",
-    "    koubai_list[gyou][retsu] = koubai\n",
+    "    koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "\n",
+    "    koubai_list[gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
+    "\n",
+    "ne\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "    あるひとつのパラメータだけちょっと増やしたNetworkを作って、順伝播する\n",
-    "    あるひとつのパラメータだけちょっと減らしたNetworkを作って、順伝播する\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # あるひとつのパラメータだけちょっと増やしたNetworkを作って、順伝播する\n",
+    "    # あるひとつのパラメータだけちょっと減らしたNetworkを作って、順伝播する\n",
+    "    その二つの値を教師データと比較し、誤差を計算する\n",
     "    それらの変化量から、ある一つのパラメータの勾配を求める。そしてリストにまとめる\n",
     "\n",
     "    これらをすべてのパラメータで一つ一つやって(for文)、勾配のリストを完成させる\n",
