--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -468,7 +468,7 @@
     "for gyou in range(len(w1的な感じつまり行数サイズ取得))\n",
     "    for retsu in range(lem(列数サイズ取得))\n",
     "    \n",
-    "    Network1 = Network[gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（w1=w1+hしてから、set_networkで作るのか？）\n",
+    "    Network1 = Network[gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
     "    out_y1 = forward(Network,in_x)#そのNetworkで順伝播して出力を得る\n",
     "    loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
