--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -462,25 +462,24 @@
     "in_x, teach = make_input()#入力データと教師信号作成\n",
     "out = forward(Network, in_x)#順伝播\n",
     "error = sum_squared_error(out,teach) #出力と教師を比較して誤差を計算\n",
-    "koubai_list = []\n",
+    "koubai_list = [[]]\n",
     "\n",
     "#繰り返し処理\n",
     "for gyou in range(len(w1的な感じつまり行数サイズ取得))\n",
     "    for retsu in range(lem(列数サイズ取得))\n",
     "    \n",
-    "    Network1 = Network[gyou][retsu] += h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
-    "    out_y1 = forward(Network,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "    Network1 = Network[gyou][retsu] + h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
+    "    out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
     "    loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "    Network2 = Network[gyou][retsu] -= h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
-    "    out_y2 = forward(Network,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "    Network2 = Network[gyou][retsu] - h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
+    "    out_y2 = forward(Network2,in_x)#そのNetworkで順伝播して出力を得る\n",
     "    loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
     "    koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
     "\n",
     "    koubai_list[gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
     "\n",
-    "ne\n",
     "\n",
     "\n",
     "\n",
