--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -223,9 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1216691841.py, line 118)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 118\u001b[1;36m\u001b[0m\n\u001b[1;33m    koubaiw1 = bibun_numerical_gradient(sum_squared_error, , network['W1'][num][i])#関数を引数に入れる場合は、関数名を引数に入れる。渡した材料で、関数の中で、入れた関数に引数を渡して使用する。\u001b[0m\n\u001b[1;37m                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -378,9 +387,79 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3],\n",
+      "       [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2],\n",
+      "       [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]),\n",
+      " array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]),\n",
+      " array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+      "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+      "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+      "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7]]),\n",
+      " array([0.1, 0.2, 0.5, 0.3, 0.4]),\n",
+      " array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]),\n",
+      " array([0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7])]\n",
+      "-------------------------------------------\n",
+      "0.101\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pprint\n",
+    "def set_network(w1,b1,w2,b2,w3,b3):\n",
+    "    network = [w1,b1,w2,b2,w3,b3]\n",
+    "    return network\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "w1 = np.array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3], \n",
+    "                              [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2], \n",
+    "                              [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4], \n",
+    "                              ]) #3つのニューロンから、8つのニューロンに出力する際の重み\n",
+    "b1 = np.array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]) #バイアスを8つのニューロンにたす\n",
+    "\n",
+    "\n",
+    "w2 = np.array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "                              [0.2, 0.5, 0.5, 0.6, 0.7]]) #8つのニューロンから5つのニューロンに出力する際の重み\n",
+    "    \n",
+    "b2 = np.array([0.1, 0.2, 0.5, 0.3, 0.4])#5つのニューロンにたすバイアス\n",
+    "w3 = np.array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]) #5つのニューロンから8つのニューロンに出力する際の重み\n",
+    "b3 = np.array([0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]) #バイアスを8つのニューロンにたす\n",
+    "\n",
+    "network = set_network(w1,b1,w2,b2,w3,b3)\n",
+    "pprint.pprint(network)\n",
+    "print(\"-------------------------------------------\")\n",
+    "Network1 = network[1][0] + 0.001\n",
+    "pprint.pprint(Network1)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -443,8 +522,6 @@
     "\n",
     "\n",
     "\n",
-    "#微小量hを定義\n",
-    "h = 1e-4#0.0001\n",
     "\n",
     "#初期の重みとバイアスを記入\n",
     "w1 = \n",
@@ -455,6 +532,8 @@
     "b3 = \n",
     "#微小量hを定義\n",
     "h = 1e-4#0.0001\n",
+    "#学習率を定義\n",
+    "learning_rate = 0.01\n",
     "\n",
     "\n",
     "\n",
@@ -481,8 +560,7 @@
     "    koubai_list[gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
+    "Network -= koubai_list * learning_rate #パラメータを更新\n",
     "\n",
     "\n",
     "\n",
