--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
       "[array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3],\n",
       "       [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2],\n",
       "       [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]),\n",
-      " array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]),\n",
+      " array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8]]),\n",
       " array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
       "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
       "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
@@ -407,15 +407,34 @@
       "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
       "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
       "       [0.2, 0.5, 0.5, 0.6, 0.7]]),\n",
-      " array([0.1, 0.2, 0.5, 0.3, 0.4]),\n",
+      " array([[0.1, 0.2, 0.5, 0.3, 0.4]]),\n",
       " array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
       "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
       "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
       "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
       "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]),\n",
-      " array([0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7])]\n",
+      " array([[0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]])]\n",
       "-------------------------------------------\n",
-      "0.101\n"
+      "[array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3],\n",
+      "       [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2],\n",
+      "       [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]),\n",
+      " array([[0.101, 0.2  , 0.3  , 0.4  , 0.5  , 0.6  , 0.7  , 0.8  ]]),\n",
+      " array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+      "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+      "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+      "       [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+      "       [0.2, 0.5, 0.5, 0.6, 0.7]]),\n",
+      " array([[0.1, 0.2, 0.5, 0.3, 0.4]]),\n",
+      " array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+      "       [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]),\n",
+      " array([[0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]])]\n",
+      "6\n"
      ]
     }
    ],
@@ -433,7 +452,7 @@
     "                              [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2], \n",
     "                              [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4], \n",
     "                              ]) #3つのニューロンから、8つのニューロンに出力する際の重み\n",
-    "b1 = np.array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]) #バイアスを8つのニューロンにたす\n",
+    "b1 = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]]) #バイアスを8つのニューロンにたす\n",
     "\n",
     "\n",
     "w2 = np.array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
@@ -445,19 +464,20 @@
     "                              [0.3, 0.6, 0.5, 0.6, 0.7],\n",
     "                              [0.2, 0.5, 0.5, 0.6, 0.7]]) #8つのニューロンから5つのニューロンに出力する際の重み\n",
     "    \n",
-    "b2 = np.array([0.1, 0.2, 0.5, 0.3, 0.4])#5つのニューロンにたすバイアス\n",
+    "b2 = np.array([[0.1, 0.2, 0.5, 0.3, 0.4]])#5つのニューロンにたすバイアス\n",
     "w3 = np.array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
     "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
     "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
     "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
     "                    [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]) #5つのニューロンから8つのニューロンに出力する際の重み\n",
-    "b3 = np.array([0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]) #バイアスを8つのニューロンにたす\n",
+    "b3 = np.array([[0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]]) #バイアスを8つのニューロンにたす\n",
     "\n",
     "network = set_network(w1,b1,w2,b2,w3,b3)\n",
     "pprint.pprint(network)\n",
     "print(\"-------------------------------------------\")\n",
-    "Network1 = network[1][0] + 0.001\n",
-    "pprint.pprint(Network1)\n",
+    "network[1][0][0] += 0.001\n",
+    "pprint.pprint(network)\n",
+    "print(len(network))\n",
     "\n"
    ]
   },
@@ -544,20 +564,23 @@
     "koubai_list = [[]]\n",
     "\n",
     "#繰り返し処理\n",
-    "for gyou in range(len(w1的な感じつまり行数サイズ取得))\n",
-    "    for retsu in range(lem(列数サイズ取得))\n",
-    "    \n",
-    "    Network1 = Network[gyou][retsu] + h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
-    "    out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
-    "    loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
+    "for param in range(len(Network)): #パラメータの種類数だけ繰り返す　本来はlen(Network)的な感じになる　やり方わからなかった\n",
+    "    for gyou in range(len(Network[param])) #w1的な感じつまり行数サイズ取得 network0番目の、行数を取得？\n",
+    "        for retsu in range(len([param][gyou])) #列数サイズ取得\n",
     "\n",
-    "    Network2 = Network[gyou][retsu] - h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
-    "    out_y2 = forward(Network2,in_x)#そのNetworkで順伝播して出力を得る\n",
-    "    loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
+    "        Network1 = Network #コピーを作る\n",
+    "        Network1[gyou][retsu] + h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
+    "        out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "        loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "    koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "        Network2 = Network #コピーを作る\n",
+    "        Network2[gyou][retsu] - h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
+    "        out_y2 = forward(Network2,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "        loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "    koubai_list[gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
+    "        koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "\n",
+    "        koubai_list[gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
     "\n",
     "\n",
     "Network -= koubai_list * learning_rate #パラメータを更新\n",
