--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -483,24 +483,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.95534701 1.99027342 2.10238961 3.50477923 3.03731602 3.50477923\n",
+      "  3.97224243 3.97224243]]\n",
+      "[[0.95534701 1.99027342 2.10238961 3.50477923 3.03731602 3.50477923\n",
+      "  3.97224243 3.97224243]]\n",
+      "[[0.95534701 1.99027342 2.10238961 3.50477923 3.03731602 3.50477923\n",
+      "  3.97224243 3.97224243]]\n",
+      "----------------------------------\n",
+      "[[[]]]\n",
+      "3.7511202962164916\n",
+      "3.7511202962164916\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 129\u001b[0m\n\u001b[0;32m    126\u001b[0m             \u001b[39mprint\u001b[39m(loss1)\n\u001b[0;32m    127\u001b[0m             \u001b[39mprint\u001b[39m(loss2)\n\u001b[1;32m--> 129\u001b[0m             koubai_list[param][gyou][retsu] \u001b[39m=\u001b[39m koubai \u001b[39m#勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\u001b[39;00m\n\u001b[0;32m    132\u001b[0m Network \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m koubai_list \u001b[39m*\u001b[39m learning_rate\n",
+      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
    "source": [
     "#ニューラルネットワークを作る関数\n",
     "def set_network(w1,b1,w2,b2,w3,b3):\n",
-    "    network[w1,b1,w2,b2,w3,b3]\n",
+    "    network = [w1,b1,w2,b2,w3,b3]\n",
     "    return network\n",
     "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
     "\n",
+    "def identity_function(x):#恒等関数\n",
+    "    return x \n",
+    "\n",
+    "def softmax(a):\n",
+    "    c = np.max(a)\n",
+    "    exp_a = np.exp(a - c)#最大値で引くことで、オーバーフローを防ぐ\n",
+    "    sum_exp_a = np.sum(exp_a)\n",
+    "    y = exp_a /sum_exp_a\n",
+    "    return y\n",
     "\n",
     "\n",
     "\n",
     "def forward(network, in_x):\n",
-    "    W1, W2, W3 = network['W1'], network['W2'], network['W3'] #　　　名前か番号か迷う\n",
-    "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
+    "    W1, W2, W3 = network[0], network[2], network[4] #　　　名前か番号か迷う\n",
+    "    b1, b2, b3 = network[1], network[3], network[5]\n",
     "\n",
-    "    a1 = np.dot(x, W1) + b1\n",
+    "    a1 = np.dot(in_x, W1) + b1\n",
     "    z1 = sigmoid(a1)\n",
     "    a2 = np.dot(z1, W2) + b2\n",
     "    z2 = sigmoid(a2)\n",
@@ -544,46 +583,70 @@
     "\n",
     "\n",
     "#初期の重みとバイアスを記入\n",
-    "w1 = \n",
-    "w2 = \n",
-    "w3 = \n",
-    "b1 = \n",
-    "b2 = \n",
-    "b3 = \n",
+    "w1 = np.array([[0.1, 0.3, 0.5, 0.6, 0.7, 0.1, 0.2, 0.3], \n",
+    "               [0.2, 0.4, 0.6, 0.1, 0.3, 0.5, 0.6, 0.2], \n",
+    "               [0.3, 0.1, 0.2, 0.4, 0.2, 0.5, 0.1, 0.4]]) #3つのニューロンから、8つのニューロンに出力する際の重み\n",
+    "b1 = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8,]]) #バイアスを8つのニューロンにたす\n",
+    "\n",
+    "w2 = np.array([[0.1, 0.4, 0.5, 0.6, 0.7],\n",
+    "               [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "               [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "               [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "               [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "               [0.2, 0.5, 0.5, 0.6, 0.7],\n",
+    "               [0.3, 0.6, 0.5, 0.6, 0.7],\n",
+    "               [0.2, 0.5, 0.5, 0.6, 0.7]]) #8つのニューロンから5つのニューロンに出力する際の重み\n",
+    "b2 = np.array([[0.1, 0.2, 0.5, 0.3, 0.4]])#5つのニューロンにたすバイアス\n",
+    "\n",
+    "w3 = np.array([[0.1, 0.3, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "               [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "               [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "               [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7],\n",
+    "               [0.2, 0.4, 0.3, 0.6, 0.5, 0.6, 0.7, 0.7]]) #5つのニューロンから8つのニューロンに出力する際の重み\n",
+    "b3 = np.array([[0.1, 0.2, 0.7, 0.7, 0.7, 0.7, 0.7, 0.7]]) #バイアスを8つのニューロンにたす\n",
+    "\n",
     "#微小量hを定義\n",
     "h = 1e-4#0.0001\n",
     "#学習率を定義\n",
     "learning_rate = 0.01\n",
-    "\n",
+    "#学習回数を定義\n",
+    "learn = 1000\n",
     "\n",
     "\n",
     "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
     "in_x, teach = make_input()#入力データと教師信号作成\n",
     "out = forward(Network, in_x)#順伝播\n",
     "error = sum_squared_error(out,teach) #出力と教師を比較して誤差を計算\n",
-    "koubai_list = [[]]\n",
+    "koubai_list = [[[]]] #np.zerosのほうがよさそう\n",
     "\n",
     "#繰り返し処理\n",
-    "for param in range(len(Network)): #パラメータの種類数だけ繰り返す　本来はlen(Network)的な感じになる　やり方わからなかった\n",
-    "    for gyou in range(len(Network[param])) #w1的な感じつまり行数サイズ取得 network0番目の、行数を取得？\n",
-    "        for retsu in range(len([param][gyou])) #列数サイズ取得\n",
+    "for i in range(learn):\n",
+    "    in_x, teach = make_input()#入力データと教師信号作成\n",
+    "    \n",
+    "    for param in range(len(Network)): #パラメータの種類数だけ繰り返す　本来はlen(Network)的な感じになる　やり方わからなかった\n",
+    "        for gyou in range(len(Network[param])): #w1的な感じつまり行数サイズ取得 network0番目の、行数を取得？\n",
+    "            for retsu in range(len(Network[param][gyou])): #列数サイズ取得\n",
     "\n",
-    "        Network1 = Network #コピーを作る\n",
-    "        Network1[gyou][retsu] + h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
-    "        out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
-    "        loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
+    "                Network1 = Network #コピーを作る\n",
+    "                Network1[param][gyou][retsu] + h #あるひとつのパラメータだけちょっと増やしたNetworkを作る ここはこうか？→（リストw1の一つの要素だけに+hしてから、set_networkで作る？そんなきがする）\n",
+    "                out_y1 = forward(Network1,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "                loss1 = sum_squared_error(out_y1,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "        Network2 = Network #コピーを作る\n",
-    "        Network2[gyou][retsu] - h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
-    "        out_y2 = forward(Network2,in_x)#そのNetworkで順伝播して出力を得る\n",
-    "        loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
+    "                Network2 = Network #コピーを作る\n",
+    "                Network2[param][gyou][retsu] - h #あるひとつのパラメータだけちょっと減らしたNetworkを作る\n",
+    "                out_y2 = forward(Network2,in_x)#そのNetworkで順伝播して出力を得る\n",
+    "                loss2 = sum_squared_error(out_y2,teach) #出力と教師データを比較し、誤差を計算する\n",
     "\n",
-    "        koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "                koubai = bibun_numerical_gradient(loss1,loss2) #２つの誤差から、勾配を求める（損失関数の微分値が求まる）\n",
+    "                print(\"----------------------------------\")\n",
+    "                print(koubai_list)\n",
+    "                print(loss1)\n",
+    "                print(loss2)\n",
     "\n",
-    "        koubai_list[gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
+    "                koubai_list[param][gyou][retsu] = koubai #勾配情報をリストに保存する　これを繰り返すと、各パラメータの勾配のリストが完成する\n",
     "\n",
     "\n",
-    "Network -= koubai_list * learning_rate #パラメータを更新\n",
+    "    Network -= koubai_list * learning_rate #パラメータを更新\n",
     "\n",
     "\n",
     "\n",
@@ -592,14 +655,14 @@
     "\n",
     "    # あるひとつのパラメータだけちょっと増やしたNetworkを作って、順伝播する\n",
     "    # あるひとつのパラメータだけちょっと減らしたNetworkを作って、順伝播する\n",
-    "    その二つの値を教師データと比較し、誤差を計算する\n",
-    "    それらの変化量から、ある一つのパラメータの勾配を求める。そしてリストにまとめる\n",
+    "    # その二つの値を教師データと比較し、誤差を計算する\n",
+    "    # それらの変化量から、ある一つのパラメータの勾配を求める。そしてリストにまとめる\n",
     "\n",
-    "    これらをすべてのパラメータで一つ一つやって(for文)、勾配のリストを完成させる\n",
+    "    # これらをすべてのパラメータで一つ一つやって(for文)、勾配のリストを完成させる\n",
     "\n",
-    "    勾配のリストに学習率をかけた者を、今のパラメータから引いて更新する\n",
+    "    # 勾配のリストに学習率をかけた者を、今のパラメータから引いて更新する\n",
     "\n",
-    "    更新後のパラメータで新たなNetworkを作成する\n",
+    "    # 更新後のパラメータで新たなNetworkを作成する\n",
     "\n",
     "\n",
     "\n",
